Fix layout issues for SkillsContent

--- a/src/scss/layouts/_skills.scss
+++ b/src/scss/layouts/_skills.scss
@@ -128,8 +128,8 @@
       }
 
       @media screen and (min-width: 1200px) {
-        width: 35px;
-        height: 35px;
+        width: 40px;
+        height: 40px;
       }
     }
   }
@@ -139,11 +139,12 @@
     margin-bottom: 0;
     grid-column: 2 / 3;
     grid-row: 3 / 4;
-    grid-template-columns: repeat(2, 1fr);
+    row-gap: 1rem;
+    grid-template-columns: repeat(5, 1fr);
   }
 
   @media screen and (min-width: 1200px) {
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(6, 1fr);
   }
 }
 .skills-message {
